@@ -63,7 +63,8 @@ body.bwp {background:white !important;}
 #masthead #platformlist .nav a[href*="/systems.html"] {display:none !important;}
 #masthead #platformlist div.jumper {padding:0 !important; width:auto !important; float:none !important; display:inline !important; height:auto !important; line-height:16px !important; }
 #masthead #platformlist div.jumper form {width:auto !important; padding:0 !important; float:none !important; display:inline !important; height:auto !important; line-height:16px !important;}
-#masthead #platformlist div.jumper select {font-size:13px !important; line-height:16px !important; width:auto !important; padding:0 !important; height:auto !important; float:none !important; display:inline !important;}
+#masthead #platformlist div.jumper select {font-size:13px !important; line-height:16px !important; padding:0 !important; height:auto !important; float:none !important; display:inline !important;}
+#masthead #platformlist div.jumper select:not(#gamefox-favorites-menu) {width:auto !important;}
 
 
 /** Footer **/
