@@ -16,6 +16,7 @@
     * Fix custom date format in message detail
     * Notification for new posts in tracked topics
     * Fix topic list link on boards that contain "track" in the title
+    * Move favorites menu to platform bar
 
 2010-05-12:
     * version 0.7.7
